--- a/app/src/main/res/layout/costum_layout_bacaan.xml
+++ b/app/src/main/res/layout/costum_layout_bacaan.xml
@@ -1,6 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="2sp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="2dp"
+        android:foreground="?android:attr/selectableItemBackground">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="8">
+
+            <TextView
+                android:id="@+id/tv_bacaan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5sp"
+                android:layout_marginRight="5sp"
+                android:layout_marginTop="5sp"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:layout_gravity="right"
+                android:text="Arabic"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.codesgood.views.JustifiedTextView
+                    android:id="@+id/tv_arti"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#616161"
+                    android:textSize="14sp"
+                    android:layout_marginLeft="5sp"
+                    android:layout_marginBottom="5sp"
+                    android:layout_marginTop="5sp"
+                    android:layout_toRightOf="@+id/image"
+                    android:text="Arti"
+                    android:textStyle="bold|italic"/>
+
+                <com.codesgood.views.JustifiedTextView
+                    android:id="@+id/tv_bacaan_latin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#616161"
+                    android:textSize="12sp"
+                    android:layout_marginLeft="5sp"
+                    android:layout_marginBottom="5sp"
+                    android:layout_marginTop="5sp"
+                    android:layout_toRightOf="@+id/image"
+                    android:text="Bacaaan"/>
+
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</RelativeLayout>
