--- a/app/src/main/res/layout/costum_layout_asmaul_husna.xml
+++ b/app/src/main/res/layout/costum_layout_asmaul_husna.xml
@@ -6,7 +6,6 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -15,7 +14,8 @@
         android:layout_marginBottom="2sp"
         app:cardCornerRadius="10dp"
         app:cardElevation="2dp"
-        android:foreground="?android:attr/selectableItemBackground">
+        android:id="@+id/card_view"
+        android:foreground="?attr/selectableItemBackground">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,21 +24,22 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:id="@+id/tes"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:orientation="vertical"
                 android:gravity="center"
-                android:background="@drawable/round_shape">
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:background="@drawable/round_shape"
+                android:id="@+id/tes">
 
                 <TextView
-                    android:id="@+id/tv_no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="99"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp"
+                    android:id="@+id/tv_no"/>
+
             </LinearLayout>
 
             <LinearLayout
@@ -57,8 +58,8 @@
                     android:textColor="#000000"
                     android:lines="1"
                     android:textSize="14sp"
-                    android:layout_toRight="@+id/image"
-                    android:text="Asma"/>
+                    android:layout_toRightOf="@+id/image"
+                    android:text="Asma" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -74,8 +75,10 @@
                         android:textColor="#616161"
                         android:textSize="12sp"
                         android:layout_toRightOf="@+id/image"
-                        android:text="Arti"/>
+                        android:text="Arti" />
+
                 </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
@@ -86,13 +89,17 @@
                 android:paddingLeft="10sp">
 
                 <TextView
-                    android:id="@+id/tv_ayat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Ayat"
                     android:textColor="#000000"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp"
+                    android:id="@+id/tv_ayat"/>
+
             </LinearLayout>
+
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
+
 </RelativeLayout>
