--- a/app/src/main/res/layout/activity_asmaul_husna_detail.xml
+++ b/app/src/main/res/layout/activity_asmaul_husna_detail.xml
@@ -31,7 +31,7 @@
                 app:layout_collapseParallaxMultiplier="0.7"/>
 
             <TextView
-                android:id="@+id/rv_ayat"
+                android:id="@+id/tv_ayat"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
