--- a/app/src/main/res/layout/activity_asmaul_husna_detail.xml
+++ b/app/src/main/res/layout/activity_asmaul_husna_detail.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="300sp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:background="@drawable/langitt"
+        android:background="@drawable/background"
         android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/langitt"
+                android:src="@drawable/background"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7"/>
 
