--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,9 +25,8 @@
                 android:id="@+id/imageView2"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/allah"
+                android:src="@drawable/logo"
                 android:scaleType="fitXY"
-                android:tint="@android:color/white"
                 android:layout_weight="1"/>
         </LinearLayout>
     </com.facebook.shimmer.ShimmerFrameLayout>
